# 2DGameJam2024

./: .gitignore  CMakeLists.txt  main.cpp
headers/: attack.hpp  boss.hpp  player.hpp
src/: attack.cpp
